# ElectroShop

./: README.md
backend/: .env  .env.example  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  dockerfile  justfile  package-lock.json  package.json
backend/app/controllers/: auth_controller.ts  roles_controller.ts
backend/app/models/: card.ts  cart.ts  cart_product.ts  category.ts  location.ts  product.ts  role.ts  user.ts
backend/app/validators/: auth.ts
backend/database/migrations/: 1723842957649_create_users_table.ts  1724003108091_create_roles_table.ts  1724376656179_create_categories_table.ts  1724376673565_create_products_table.ts  1724376681896_create_carts_table.ts  1724376688794_create_cart_products_table.ts  1724376700742_create_cards_table.ts  1724376717958_create_locations_table.ts
backend/migrations/: 20240830014945_create_roles_table.sql  20240830015019_create_users_table.sql  20240830015112_create_categories_table.sql  20240830015141_create_products_table.sql  20240830015208_create_carts_table.sql  20240830015234_create_carts_products_table.sql  20240830015300_create_cards_table.sql  20240830015319_create_locations_table.sql  20241114234638_create_user_table.sql  20241114234644_create_category_table.sql  20241114234653_create_product_table.sql  20241114234657_create_sell_table.sql  20241114234709_create_cart_product_table.sql  20241119060938_create_sells_table.sql  20241119060948_create_transaction_table.sql
backend/src/: main.rs
backend/start/: routes.ts
backend/temp/: sqlx.db  sqlx.db-shm  sqlx.db-wal
frontend/: index.html  (+4 more)
(+89 files in other folders)
